[BUGFIX] Hopefully fixed auto-market even on broken interface (when unlocking crates/containers for the first time in current reset)

--- a/styles/automations/_auto-market.scss
+++ b/styles/automations/_auto-market.scss
@@ -1,8 +1,19 @@
 .auto-market-container {
     margin-left: 1rem;
+    padding-left: 9.5rem;
+
+    height: 22px;
 
     display: flex;
     gap: 0.5rem;
+    align-items: center;
+
+    line-height: 1rem;
+    font-size: 0.875rem;
+
+    &.offset-right {
+        padding-left: 27.5rem;
+    }
 
     .toggle-button.auto-market {
         display: flex;
@@ -10,8 +21,8 @@
 
         margin: 0;
 
-        font-size: 14px;
-        line-height: 14px;
+        //font-size: 14px;
+        //line-height: 14px;
         flex-direction: column;
         justify-content: center;
 
